--- a/css/subtotal.css
+++ b/css/subtotal.css
@@ -244,6 +244,10 @@ body {
   position: fixed;
   top: 39vw;
 }
+
+#year-slider {
+  cursor: pointer;
+}
   
 .timeline input[type="range"] {
   width: 100%;
