--- a/css/subtotal.css
+++ b/css/subtotal.css
@@ -281,7 +281,7 @@ body {
 }
   
 input[type="range"] {
-  -webkit-appearance: none;
+  appearance: none;
   background-color: gray;
   height: 0.5vw;
   border-radius: 1vw;
